[main@530b50b] Update AL-Go System Files from freddydk/AL-Go@cicdauthcontext - a1202b1

--- a/.github/AL-Go-Settings.json
+++ b/.github/AL-Go-Settings.json
@@ -1,4 +1,5 @@
 {
   "type": "PTE",
-  "templateUrl": "https://github.com/microsoft/AL-Go-PTE@main"
+  "templateUrl": "https://github.com/freddydk/AL-Go@cicdauthcontext",
+  "templateSha": "a1202b1bcbf6a69e874e77b7b7cbb81ebfbd81a2"
 }
