[main@bbe4418] Update AL-Go System Files from freddydk/AL-Go@cicdauthcontext - 637c81c

--- a/.github/workflows/_BuildALGoProject.yaml
+++ b/.github/workflows/_BuildALGoProject.yaml
@@ -137,6 +137,8 @@ jobs:
         id: determineArtifactUrl
         if: steps.DetermineBuildProject.outputs.BuildIt == 'True'
         uses: freddydk/AL-Go/Actions/DetermineArtifactUrl@cicdauthcontext
+        env:
+          Secrets: '${{ steps.ReadSecrets.outputs.Secrets }}'
         with:
           shell: ${{ inputs.shell }}
           project: ${{ inputs.project }}
