--- a/.github/AL-Go-Settings.json
+++ b/.github/AL-Go-Settings.json
@@ -2,5 +2,8 @@
   "type": "PTE",
   "templateUrl": "https://github.com/freddydk/AL-Go@cicdauthcontext",
   "templateSha": "727ec1bc4e5ea822c0902fe308ffb62db2468719",
-  "githubRunnerShell": "pwsh"
+  "githubRunnerShell": "pwsh",
+  "aldoc": {
+    "continuousDeployment": true
+  }
 }
