--- a/.github/workflows/DeployReferenceDocumentation.yaml
+++ b/.github/workflows/DeployReferenceDocumentation.yaml
@@ -11,7 +11,7 @@ permissions:
 
 defaults:
   run:
-    shell: pwsh
+    shell: powershell
 
 env:
   ALGoOrgSettings: ${{ vars.ALGoOrgSettings }}
@@ -19,7 +19,7 @@ env:
 
 jobs:
   DeployALDoc:
-    runs-on: [ ubuntu-latest ]
+    runs-on: [ windows-latest ]
     name: Deploy Reference Documentation
     environment:
       name: github-pages
@@ -32,12 +32,12 @@ jobs:
         id: init
         uses: freddydk/AL-Go/Actions/WorkflowInitialize@cicdauthcontext
         with:
-          shell: pwsh
+          shell: powershell
 
       - name: Read settings
         uses: freddydk/AL-Go/Actions/ReadSettings@cicdauthcontext
         with:
-          shell: pwsh
+          shell: powershell
 
       - name: Determine Deployment Environments
         id: DetermineDeploymentEnvironments
@@ -45,7 +45,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ github.token }}
         with:
-          shell: pwsh
+          shell: powershell
           getEnvironments: 'github-pages'
           type: 'Publish'
 
@@ -56,7 +56,7 @@ jobs:
       - name: Build Reference Documentation
         uses: freddydk/AL-Go/Actions/BuildReferenceDocumentation@cicdauthcontext
         with:
-          shell: pwsh
+          shell: powershell
           artifacts: 'latest'
 
       - name: Upload pages artifact
@@ -75,6 +75,6 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ github.token }}
         with:
-          shell: pwsh
+          shell: powershell
           telemetryScopeJson: ${{ steps.init.outputs.telemetryScopeJson }}
           currentJobContext: ${{ toJson(job) }}
