--- a/.github/workflows/CICD.yaml
+++ b/.github/workflows/CICD.yaml
@@ -167,6 +167,8 @@ jobs:
 
       - name: Check for updates to AL-Go system files
         uses: freddydk/AL-Go/Actions/CheckForUpdates@cicdauthcontext
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
         with:
           shell: powershell
           templateUrl: ${{ env.templateUrl }}
