--- a/.github/workflows/UpdateGitHubGoSystemFiles.yaml
+++ b/.github/workflows/UpdateGitHubGoSystemFiles.yaml
@@ -133,6 +133,8 @@ jobs:
 
       - name: Update AL-Go system files
         uses: freddydk/AL-Go/Actions/CheckForUpdates@cicdauthcontext
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
         with:
           shell: powershell
           token: ${{ fromJson(steps.ReadSecrets.outputs.Secrets).ghTokenWorkflow }}
